# evrouter

./: README  autogen.sh  configure.ac  evrouter_0.4.dsc  evrouter_0.4_amd64.deb  evrouter_0.4_i386.deb
branches/postcrash/: autogen.sh  config.h.in  configure.in
branches/postcrash/src/: evdev.h  evrouter.c  example  parser.c  x11.h
debian/: README.Debian  changelog  control  evrouter.substvars
debian-old/: rules
debian/evrouter/DEBIAN/: control
debian/evrouter/usr/share/doc/evrouter/: README
src/: Makefile.am  action_shell.c  action_xbutton.c  action_xbutton.h  action_xkey.h  action_xmms.c  cmdline.c  evdev.c  evdev.h  evrouter.1  evrouter.c  example  parser.c  parser.h  x11.c  x11.h
tags/V0_3_2/: AUTHORS  ChangeLog
tags/V0_3_2/src/: action_shell.h  action_xbutton.c  action_xkey.c  action_xmms.h  evdev.c
trunk/: Makefile.am  autogen.sh  configure.in
trunk/debian/: changelog  copyright  files  rules
trunk/debian-old/: copyright
trunk/debian/evrouter/DEBIAN/: md5sums
trunk/debian/tmp/usr/share/man/man1/: evrouter.1
trunk/src/: Makefile.am  action_shell.h  action_xkey.c  action_xmms.c  action_xmms.h  cmdline.c  cmdline.h  parser.c  parser.h  x11.c
